--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -78,6 +78,11 @@
                                             </a>
                                         </li>
 										<li class="dropdown-submenu">
+                                            <a href="http://beta.365onlinetraining.com/oracle-webcenter-portal-training/">Oracle WebCenter Portal
+                                                <span class="c-arrow c-toggler"></span>
+                                            </a>
+                                        </li>
+										<li class="dropdown-submenu">
                                             <a href="http://beta.365onlinetraining.com/oracle-mobile-application-framework-training-maf/">Oracle MAF
                                                 <span class="c-arrow c-toggler"></span>
                                             </a>
@@ -100,7 +105,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#" class="c-link dropdown-toggle">Contact
+                                    <a href="http://beta.365onlinetraining.com/contact/" class="c-link dropdown-toggle">Contact
                                         <span class="c-arrow c-toggler"></span>
                                     </a>
                                    </li>
@@ -253,19 +258,7 @@
                 </div>
             </section>
             <!-- END: LAYOUT/SLIDERS/REVO-SLIDER-9 -->
-            <!-- BEGIN: CONTENT/ABOUT -->
-            <div class="c-content-box c-size-md c-bg-white c-no-bottom-padding" id="about">
-                <div class="container">
-                    <div class="c-content-product-1 c-opt-1">
-                        <div class="c-content-title-1">
-                            <h3 class="c-center c-font-uppercase c-font-bold"> About Us</h3>
-							 <p class="c-font-uppercase c-font-sbold text-center">365 Online is the leading IT training and consultancy provider in the field of customer experience that focuses on quality, innovation, & speed. We utiliz technology to bring results and  pride ourselves in great work ethic and end-results. Our trainers and consultants are certified and highly experienced in their technology domain.</p>
-                            <div class="c-line-center"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- END: CONTENT/ABOUT -->
+            
             <!-- BEGIN: CONTENT/TRAINING COURSES -->
             <div class="c-content-box c-size-md c-bg-grey-1" id="course">
                 <div class="container">
@@ -284,7 +277,7 @@
                                     <div class="c-media c-content-overlay">
                                         <div class="c-overlay-wrapper">
                                             <div class="c-overlay-content">
-                                                <a href="#">
+                                                <a href="http://beta.365onlinetraining.com/oracle-webcenter-sites-12c-online-training/">
                                                     <i class="icon-link"></i>
                                                 </a>
                                             </div>
@@ -292,7 +285,7 @@
                                         <img class="c-overlay-object img-responsive" src="assets/course/shot01.jpg" alt="Oracle WebCenter Sites"> </div>
                                     <div class="c-body">
                                         <div class="c-title c-font-uppercase c-font-bold">
-                                            <a href="#">Oracle WebCenter Sites</a>
+                                            <a href="http://beta.365onlinetraining.com/oracle-webcenter-sites-12c-online-training/">Oracle WebCenter Sites</a>
                                         </div>
 										<script type="text/javascript">
 Date.prototype.addDays = function(days)
@@ -308,7 +301,7 @@ var dt=dat.addDays(2);
 document.write(dt.toDateString());
 
 </script> </br></br>
-<a href="#" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">View Details</a>
+<a href="http://beta.365onlinetraining.com/oracle-webcenter-sites-12c-online-training/" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">Learn More</a>
                                     </div>
                                 </div>
                             </div>
@@ -317,7 +310,7 @@ document.write(dt.toDateString());
                                     <div class="c-media c-content-overlay">
                                         <div class="c-overlay-wrapper">
                                             <div class="c-overlay-content">
-                                                <a href="#">
+                                                <a href="http://beta.365onlinetraining.com/oracle-webcenter-content-training/">
                                                     <i class="icon-link"></i>
                                                 </a>
                                             </div>
@@ -325,7 +318,7 @@ document.write(dt.toDateString());
                                         <img class="c-overlay-object img-responsive" src="assets/course/shot01.jpg" alt="Oracle WebCenter Content"> </div>
                                     <div class="c-body">
                                         <div class="c-title c-font-uppercase c-font-bold">
-                                            <a href="#">Oracle WebCenter Content</a>
+                                            <a href="http://beta.365onlinetraining.com/oracle-webcenter-content-training/">Oracle WebCenter Content</a>
                                         </div>
                                          <script type="text/javascript">
 Date.prototype.addDays = function(days)
@@ -341,7 +334,40 @@ var dt=dat.addDays(2);
 document.write(dt.toDateString());
 
 </script> </br></br>
-<a href="#" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">View Details</a>
+<a href="http://beta.365onlinetraining.com/oracle-webcenter-content-training/" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">Learn More</a>
+                                    </div>
+                                </div>
+                            </div>
+							<div class="item">
+                                <div class="c-content-blog-post-card-1 c-option-2">
+                                    <div class="c-media c-content-overlay">
+                                        <div class="c-overlay-wrapper">
+                                            <div class="c-overlay-content">
+                                                <a href="http://beta.365onlinetraining.com/oracle-webcenter-portal-training/">
+                                                    <i class="icon-link"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <img class="c-overlay-object img-responsive" src="assets/course/shot01.jpg" alt="Oracle WebCenter Content"> </div>
+                                    <div class="c-body">
+                                        <div class="c-title c-font-uppercase c-font-bold">
+                                            <a href="http://beta.365onlinetraining.com/oracle-webcenter-portal-training/">Oracle WebCenter Portal</a>
+                                        </div>
+                                         <script type="text/javascript">
+Date.prototype.addDays = function(days)
+{
+    var dat = new Date(this.valueOf());
+    dat.setDate(dat.getDate() + days);
+    return dat;
+}
+
+var dat =  new Date();
+
+var dt=dat.addDays(3);
+document.write(dt.toDateString());
+
+</script> </br></br>
+<a href="http://beta.365onlinetraining.com/oracle-webcenter-portal-training/" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">Learn More</a>
                                     </div>
                                 </div>
                             </div>
@@ -350,7 +376,7 @@ document.write(dt.toDateString());
                                     <div class="c-media c-content-overlay">
                                         <div class="c-overlay-wrapper">
                                             <div class="c-overlay-content">
-                                                <a href="#">
+                                                <a href="http://beta.365onlinetraining.com/oracle-mobile-application-framework-training-maf/">
                                                     <i class="icon-link"></i>
                                                 </a>
                                             </div>
@@ -358,7 +384,7 @@ document.write(dt.toDateString());
                                         <img class="c-overlay-object img-responsive" src="assets/course/shot03.png" alt="Oracle MAF"> </div>
                                     <div class="c-body">
                                         <div class="c-title c-font-uppercase c-font-bold">
-                                            <a href="#">Oracle MAF</a>
+                                            <a href="http://beta.365onlinetraining.com/oracle-mobile-application-framework-training-maf/">Oracle MAF</a>
                                         </div>
                                        <script type="text/javascript">
 Date.prototype.addDays = function(days)
@@ -374,7 +400,7 @@ var dt=dat.addDays(3);
 document.write(dt.toDateString());
 
 </script>  </br></br>
-<a href="#" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">View Details</a>
+<a href="http://beta.365onlinetraining.com/oracle-mobile-application-framework-training-maf/" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">Learn More</a>
                                     </div>
                                 </div>
                             </div>
@@ -383,7 +409,7 @@ document.write(dt.toDateString());
                                     <div class="c-media c-content-overlay">
                                         <div class="c-overlay-wrapper">
                                             <div class="c-overlay-content">
-                                                <a href="#">
+                                                <a href="http://beta.365onlinetraining.com/oracle-atg-training/">
                                                     <i class="icon-link"></i>
                                                 </a>
                                             </div>
@@ -391,7 +417,7 @@ document.write(dt.toDateString());
                                         <img class="c-overlay-object img-responsive" src="assets/course/shot04.png" alt="Oracle ATG Web Commerce"> </div>
                                     <div class="c-body">
                                         <div class="c-title c-font-uppercase c-font-bold">
-                                            <a href="#">Oracle ATG Web Commerce</a>
+                                            <a href="http://beta.365onlinetraining.com/oracle-atg-training/">Oracle ATG Web Commerce</a>
                                         </div>
                                         <script type="text/javascript">
 Date.prototype.addDays = function(days)
@@ -407,7 +433,7 @@ var dt=dat.addDays(4);
 document.write(dt.toDateString());
 
 </script> </br></br>
-<a href="#" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">View Details</a>
+<a href="http://beta.365onlinetraining.com/oracle-atg-training/" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">Learn More</a>
                                     </div>
                                 </div>
                             </div>
@@ -416,7 +442,7 @@ document.write(dt.toDateString());
                                     <div class="c-media c-content-overlay">
                                         <div class="c-overlay-wrapper">
                                             <div class="c-overlay-content">
-                                                <a href="#">
+                                                <a href="http://beta.365onlinetraining.com/angular-js-online-course>
                                                     <i class="icon-link"></i>
                                                 </a>
                                             </div>
@@ -424,7 +450,7 @@ document.write(dt.toDateString());
                                         <img class="c-overlay-object img-responsive" src="assets/course/shot07.jpg" alt="Angular JS"> </div>
                                     <div class="c-body">
                                         <div class="c-title c-font-uppercase c-font-bold">
-                                            <a href="#">Angular JS</a>
+                                            <a href="http://beta.365onlinetraining.com/angular-js-online-course">Angular JS</a>
                                         </div>
                                         <script type="text/javascript">
 Date.prototype.addDays = function(days)
@@ -440,7 +466,7 @@ var dt=dat.addDays(4);
 document.write(dt.toDateString());
 
 </script> </br></br>
-<a href="#" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">View Details</a>
+<a href="http://beta.365onlinetraining.com/angular-js-online-course" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">Learn More</a>
                                     </div>
                                 </div>
                             </div>
@@ -449,7 +475,7 @@ document.write(dt.toDateString());
                                     <div class="c-media c-content-overlay">
                                         <div class="c-overlay-wrapper">
                                             <div class="c-overlay-content">
-                                                <a href="#">
+                                                <a href="http://beta.365onlinetraining.com/oracle-adf-online-training/">
                                                     <i class="icon-link"></i>
                                                 </a>
                                             </div>
@@ -457,7 +483,7 @@ document.write(dt.toDateString());
                                         <img class="c-overlay-object img-responsive" src="assets/course/shot06.jpg" alt="Oracle ADF"> </div>
                                     <div class="c-body">
                                         <div class="c-title c-font-uppercase c-font-bold">
-                                            <a href="#">Oracle ADF</a>
+                                            <a href="http://beta.365onlinetraining.com/oracle-adf-online-training/">Oracle ADF</a>
                                         </div>
                                         <script type="text/javascript">
 Date.prototype.addDays = function(days)
@@ -473,7 +499,7 @@ var dt=dat.addDays(5);
 document.write(dt.toDateString());
 
 </script> </br></br>
-<a href="#" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">View Details</a>
+<a href="http://beta.365onlinetraining.com/oracle-adf-online-training/" class="c-action-btn btn btn-lg c-btn-square c-btn-bold c-btn-border-1x c-theme-btn c-btn-uppercase">Learn More</a>
                                     </div>
                                 </div>
                             </div>
