--- a/bootstrap/oracle-webcenter-sites-12c-online-training/index.html
+++ b/bootstrap/oracle-webcenter-sites-12c-online-training/index.html
@@ -74,6 +74,11 @@
                                             </a>
                                         </li>
 										<li class="dropdown-submenu">
+                                            <a href="http://beta.365onlinetraining.com/oracle-webcenter-portal-training/">Oracle WebCenter Portal
+                                                <span class="c-arrow c-toggler"></span>
+                                            </a>
+                                        </li>
+										<li class="dropdown-submenu">
                                             <a href="http://beta.365onlinetraining.com/oracle-mobile-application-framework-training-maf/">Oracle MAF
                                                 <span class="c-arrow c-toggler"></span>
                                             </a>
@@ -96,7 +101,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="#" class="c-link dropdown-toggle">Contact
+                                    <a href="http://beta.365onlinetraining.com/contact/" class="c-link dropdown-toggle">Contact
                                         <span class="c-arrow c-toggler"></span>
                                     </a>
                                    </li>
