Site map added, Training programs grid added

--- a/bootstrap/oracle-webcenter-content-training/index.html
+++ b/bootstrap/oracle-webcenter-content-training/index.html
@@ -435,7 +435,46 @@
                 <div class="c-prefooter">
                     <div class="c-body">
                         <div class="row">
-                            <div class="col-md-3 col-sm-12 col-xs-12">
+						<div class="col-md-8 col-sm-12 col-xs-12">
+							<div class="c-content-title-1 c-title-md">
+                                    <h3 class="c-title c-font-uppercase c-font-bold">365 Online</h3>
+                                    <div class="c-line-left hide"></div>
+                                </div>
+                                <ul class="c-links c-theme-ul">
+                                    <li>
+                                        <a href="http://beta.365onlinetraining.com/about-us/">About</a>
+                                    </li>
+                                    <li>
+                                        <a href="http://beta.365onlinetraining.com/contact/">Contact</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Blog</a>
+                                    </li>
+                                </ul>
+                                <ul class="c-links c-theme-ul">
+									<li>
+                                        <a href="http://beta.365onlinetraining.com/oracle-webcenter-content-training/">Oracle Webcenter Content Training</a>
+                                    </li>
+									<li>
+                                        <a href="http://beta.365onlinetraining.com/oracle-webcenter-portal-training/">Oracle WebCenter Portal Training</a>
+                                    </li>
+                                    <li>
+                                        <a href="http://beta.365onlinetraining.com/oracle-webcenter-sites-12c-online-training/">Oracle WebCentre Sites Training</a>
+                                    </li>
+                                </ul>
+								<ul class="c-links c-theme-ul">
+								<li>
+                                        <a href="http://beta.365onlinetraining.com/oracle-atg-training/">Oracle ATG Web Commerce Training</a>
+                                    </li>
+                                    <li>
+                                        <a href="http://beta.365onlinetraining.com/oracle-mobile-application-framework-training-maf/">Oracle MAF Training</a>
+                                    </li>
+									<li>
+										<a href="http://beta.365onlinetraining.com/oracle-adf-online-training/">Oracle ADF Training</a>
+									</li>
+								</ul>
+                            </div>
+                            <div class="col-md-4 col-sm-12 col-xs-12">
                                 <div class="c-content-title-1 c-title-md">
                                     <h3 class="c-title c-font-uppercase c-font-bold">Contact Us</h3>
                                     <div class="c-line-left hide"></div>
