--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -263,7 +263,7 @@
             <div class="c-content-box c-size-md c-bg-grey-1" id="course">
                 <div class="container">
 				<div class="c-content-title-1">
-                            <h3 class="c-center c-font-uppercase c-font-bold">Training Programs</h3>
+                            <h3 class="c-center c-font-uppercase c-font-bold">Upcoming Trainings</h3>
                             <div class="c-line-center c-theme-bg"></div>
                         </div>
 				<div class="row">
